# homework_13_1

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/test_data/: not_json.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_test_utils_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html
logs/: mylog.txt  test_error.txt
logs/decorator_logs/: mylog.txt  test_ok.txt
src/: decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  test_utils.py  utils.py  widget.py
tests/: conftest.py  main.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
